mirroring-app/Deployment_v2.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mirroring-app-v2
  namespace: retry-test-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mirroring-app
      version: v2
  template:
    metadata:
      labels:
        app: mirroring-app
        version: v2
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
        - name: mirroring-app
          image: tanyavoteva/mirroring-app:buggy
          ports:
            - containerPort: 8080
              protocol: TCP
