mirroring-app/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: mirroring-app
  namespace: retry-test-project
  labels:
    app: mirroring-app
spec:
  selector:
    app: mirroring-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
