mirroring-app/VirtualService.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mirroring-app
  namespace: retry-test-project
spec:
  gateways:
    - istio-ingressgateway
  hosts:
    - mirroring-app.org
  http:
    - route:
        - destination:
            host: mirroring-app
            subset: v1
          weight: 100
      mirror:
        host: mirroring-app
        subset: v2
      mirror_percent: 100
